# number_recognition

./: .envrc  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: qgycgcsahrjgyjxyb48izl0lm7r02b80-source  vh67jcsqz7d0lyzhi7jh7j8adab2wap9-source  wa0imj9p3ly5lfv04g517rq22i0zddh7-source  y73h843vdmm88mvd0b22311b3l2sji65-source
benchmarking/: comparison_script.py  parallel.json  py_results.json  rust_results.json
flamegraph/: flamegraph.svg.old
models/: accurate.txt  tmp.txt
python/: main.py  pyproject.toml
results/: comparison_script.py  rust_parallel_results.json
src/: activation_functions.rs  main.rs  neural_network.rs  optimisation_algos.rs  tests.rs  training_data.rs
