[package]
name = "number_recognition"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.4.7"
float-cmp = "0.10.0"
image = "0.25.6"
nalgebra = "0.33.2"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "plotters-bitmap"] }
rand = "0.9.1"
rand_distr = "0.5.1"
